--- a/Webapp/index.html
+++ b/Webapp/index.html
@@ -7,12 +7,13 @@
         <title>My Favorite Movies</title>
         <link rel="stylesheet" href="static/css/style.css">
         <link rel="author" href="humans.txt">
-        <script src="static/js/routie.js"></script>
-        <script src="static/js/vendor/transparency.min.js"></script>
-        <script src="static/js/vendor/jquery-1.11.1.min.js"></script>
+        
     </head>
-    <body>
+    <body>	
 		<main id="content">
+			<p id="DA">
+				da
+			</p>
 			<section data-route="about">
 				<section>
 					<header>
@@ -87,11 +88,14 @@
 		<header>
 			<nav>
 				<ul>
-					<li><a href="#">About</a></li>
+					<li><a href="#">About</a></a></li>
 					<li><a href="#">Movies</a></li>
 				</ul>
 			</nav>
 		</header>
+		<script src="static/js/routie.js"></script>
+		<script src="static/js/vendor/jquery-1.11.1.min.js"></script>
+        <script src="static/js/vendor/transparency.min.js"></script>
         <script src="static/js/app.js"></script>
     </body>
 </html>
