--- a/Webapp/index.html
+++ b/Webapp/index.html
@@ -31,15 +31,15 @@ Edited by Jurrien Meyrahn
 				<h1>Favorite movies</h1>	
 				<article id="movieInstance">
 					<header>
-						<h1 class="movieTitle">Shawshank Redemption</h1>
-						<em class="movieReleaseDateLabel">Release date: <time class="movieReleaseDate">14 October 1994</time></em>
+						<h1 class="title">Shawshank Redemption</h1>
+						<em class="movieReleaseDateLabel">Release date: <time class="release_date">14 October 1994</time></em>
 					</header>
 
 					<figure id="imgFigure">
-						<img class="movieImage" src="images/shawshank-redemption.jpg" alt="">
+						<img class="cover" src="" alt="">
 					</figure>
 
-					<p class="movieDescription">Two imprisoned men bond over a number of years, finding solace and eventual redemption through acts of common decency.</p>
+					<p class="plot">Two imprisoned men bond over a number of years, finding solace and eventual redemption through acts of common decency.</p>
 				</article>
 			</section>
 		</main>
