--- a/Webapp2/index.html
+++ b/Webapp2/index.html
@@ -31,7 +31,7 @@ Edited by Jurrien Meyrahn
 				<h1>Favorite movies</h1>	
 				<article id="movieInstance">
 					<header>
-						<h1 class="title">Shawshank Redemption</h1>
+						<h1 class="title">Shawshank Redemption</h1> <h2 id="reviews"><h2 id="score"></h2>
 						<em class="movieReleaseDateLabel">Release date: <time class="release_date">14 October 1994</time></em>
 					</header>
 
